tests/netedit/basic/configs/netecfg/load/invalid/testsuite.netedit.internal
all

all_empty

network

additionals

demands

datas

meandatas
